--- a/payroll-service/payroll-service.vbproj
+++ b/payroll-service/payroll-service.vbproj
@@ -57,6 +57,7 @@
       <HintPath>..\..\1 - Bins\Accounting Automation\payroll-management\Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="NPOI, Version=2.5.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
       <HintPath>..\packages\NPOI.2.5.1\lib\net45\NPOI.dll</HintPath>
     </Reference>
@@ -91,9 +92,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\Compare.vb" />
-    <Compile Include="Controller\Employees.vb" />
+    <Compile Include="Controller\Employee.vb" />
     <Compile Include="Controller\Government.vb" />
     <Compile Include="Controller\Payroll.vb" />
+    <Compile Include="Controller\PayrollTime.vb" />
     <Compile Include="Controller\Payslip.vb" />
     <Compile Include="Controller\Report.vb" />
     <Compile Include="Controller\cls13thMonth.vb" />
@@ -107,7 +109,7 @@
     <Compile Include="Model\Perday\Perday_PayrollInfo.vb" />
     <Compile Include="Controller\DBF.vb" />
     <Compile Include="Model\Employee.vb" />
-    <Compile Include="Model\PayrollTimeInfo.vb" />
+    <Compile Include="Model\PayrollTime.vb" />
     <Compile Include="PayrollRecord.vb" />
     <Compile Include="Export.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -147,6 +149,11 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\accounting-monitoring\utility-service\utility-service.vbproj">
+      <Project>{2048200D-5C0B-4D76-B398-565C28D0A408}</Project>
+      <Name>utility-service</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
