--- a/payroll-service/payroll-service.vbproj
+++ b/payroll-service/payroll-service.vbproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <Compile Include="Controller\Adjustment.vb" />
     <Compile Include="Controller\BankName.vb" />
+    <Compile Include="Controller\Government.vb" />
     <Compile Include="Controller\PayrollCode.vb" />
     <Compile Include="Controller\BankCategory.vb" />
     <Compile Include="Controller\AccountNumber.vb" />
