--- a/employee-sync/employee-sync.vbproj
+++ b/employee-sync/employee-sync.vbproj
@@ -48,6 +48,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -95,6 +96,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SharedObject.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmMain.resx">
@@ -118,6 +120,16 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\accounting-monitoring\utility-service\utility-service.vbproj">
+      <Project>{2048200d-5c0b-4d76-b398-565c28d0a408}</Project>
+      <Name>utility-service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\payroll-service\payroll-service.vbproj">
+      <Project>{a37580dd-b1e1-4502-8ce9-9507f6bb096f}</Project>
+      <Name>payroll-service</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
