--- a/payroll-service/payroll-service.vbproj
+++ b/payroll-service/payroll-service.vbproj
@@ -50,6 +50,9 @@
     <Reference Include="DotNetDBF, Version=6.0.0.3, Culture=neutral, PublicKeyToken=9c071727b589770e, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetDBF.6.0.0.3\lib\net35\DotNetDBF.dll</HintPath>
     </Reference>
+    <Reference Include="hrms-api-service">
+      <HintPath>..\..\..\..\..\source\repos\hrms-api-service\hrms-api-service\bin\Debug\hrms-api-service.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=1.2.0.246, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.1.2.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
@@ -58,8 +61,8 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.20.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NPOI, Version=2.5.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
       <HintPath>..\packages\NPOI.2.5.1\lib\net45\NPOI.dll</HintPath>
@@ -157,9 +160,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\accounting-monitoring\utility-service\utility-service.vbproj">
-      <Project>{2048200D-5C0B-4D76-B398-565C28D0A408}</Project>
+    <ProjectReference Include="..\..\..\..\..\source\repos\ddc-utility-service\utility-service\utility-service.vbproj">
+      <Project>{d314d3f7-c0e4-4103-b768-e5b299ce14b7}</Project>
       <Name>utility-service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\accounting-monitoring\utility-service\monitoring-service.vbproj">
+      <Project>{2048200d-5c0b-4d76-b398-565c28d0a408}</Project>
+      <Name>monitoring-service</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
