--- a/payroll-management-system/packages.config
+++ b/payroll-management-system/packages.config
@@ -3,4 +3,7 @@
   <package id="AdonisUI" version="1.17.1" targetFramework="net452" />
   <package id="AdonisUI.ClassicTheme" version="1.17.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
+  <package id="NPOI" version="2.5.1" targetFramework="net452" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net452" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net452" />
 </packages>
