--- a/payroll-service/payroll-service.vbproj
+++ b/payroll-service/payroll-service.vbproj
@@ -97,28 +97,31 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\Adjustment.vb" />
-    <Compile Include="Controller\BankName.vb" />
-    <Compile Include="Controller\Government.vb" />
-    <Compile Include="Controller\PayrollCode.vb" />
-    <Compile Include="Controller\BankCategory.vb" />
-    <Compile Include="Controller\AccountNumber.vb" />
-    <Compile Include="Controller\CardNumber.vb" />
-    <Compile Include="Controller\PayRegister.vb" />
-    <Compile Include="Controller\Payslip.vb" />
-    <Compile Include="Controller\Employee.vb" />
-    <Compile Include="Controller\Payroll.vb" />
-    <Compile Include="Model\AccountNumber.vb" />
-    <Compile Include="Model\BankName.vb" />
-    <Compile Include="Model\BankCategory.vb" />
-    <Compile Include="Model\CardNumber.vb" />
-    <Compile Include="Model\Adjustment.vb" />
-    <Compile Include="Model\Government.vb" />
-    <Compile Include="Model\Payroll.vb" />
-    <Compile Include="Controller\Report.vb" />
-    <Compile Include="Model\PayrollCode.vb" />
-    <Compile Include="Model\Employee.vb" />
-    <Compile Include="Controller\Export.vb" />
+    <Compile Include="Adjustment\Log\Gateway.vb" />
+    <Compile Include="Adjustment\Log\Model.vb" />
+    <Compile Include="Adjustment\Record\Model.vb" />
+    <Compile Include="Bank Name\Gateway.vb" />
+    <Compile Include="Payroll\Controller.vb" />
+    <Compile Include="Payroll\Government\Gateway.vb" />
+    <Compile Include="Payroll\Code\Gateway.vb" />
+    <Compile Include="Bank Category\Gateway.vb" />
+    <Compile Include="Account Number\Gateway.vb" />
+    <Compile Include="Card Number\Gateway.vb" />
+    <Compile Include="Payroll\Controller\PayRegister.vb" />
+    <Compile Include="Payroll\Controller\Payslip.vb" />
+    <Compile Include="Employee\Gateway.vb" />
+    <Compile Include="Payroll\Gateway.vb" />
+    <Compile Include="Account Number\Model.vb" />
+    <Compile Include="Bank Name\Model.vb" />
+    <Compile Include="Bank Category\Model.vb" />
+    <Compile Include="Card Number\Model.vb" />
+    <Compile Include="Adjustment\Model.vb" />
+    <Compile Include="Payroll\Government\Model.vb" />
+    <Compile Include="Payroll\Model.vb" />
+    <Compile Include="Payroll\Controller\Report.vb" />
+    <Compile Include="Payroll\Code\Model.vb" />
+    <Compile Include="Employee\Model.vb" />
+    <Compile Include="Payroll\Controller\Export.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -134,6 +137,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Payroll\Time\DownloadLog\Gateway.vb" />
+    <Compile Include="Payroll\Time\DownloadLog\Model.vb" />
+    <Compile Include="Payroll\Time\Controller.vb" />
+    <Compile Include="Payroll\Time\Gateway.vb" />
+    <Compile Include="Payroll\Time\Model.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -165,6 +173,11 @@
       <Project>{2048200d-5c0b-4d76-b398-565c28d0a408}</Project>
       <Name>monitoring-service</Name>
     </ProjectReference>
+    <ProjectReference Include="..\payroll-time-service\payroll-time-service.vbproj">
+      <Project>{ae6cb562-cecf-498d-9df0-c8b3682c1d55}</Project>
+      <Name>payroll-time-service</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
